--- a/all.yaml
+++ b/all.yaml
@@ -12,6 +12,8 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: python-fastapi
+  annotations:
+    github.com/project-slug: stagecentral/python-fastapi-service-template
 spec:
   type: service
   lifecycle: experimental
